--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,33 +7,33 @@ jobs:
   setup-cloud-pc:
     runs-on: windows-2025
     steps:
-      - name: Download AnyViewer Portable
+      - name: Download Supremo Portable
         shell: pwsh
         run: |
-          $url = "https://dl.anyviewer.com/noinstall/AnyViewer.exe"
-          $output = "$env:TEMP\AnyViewer.exe"
-          Write-Output "Downloading AnyViewer Portable..."
+          $url = "https://www.supremocontrol.com/download/supremo/windows/"
+          $output = "$env:TEMP\supremo.exe"
+          Write-Output "Downloading Supremo Portable..."
           Invoke-WebRequest -Uri $url -OutFile $output
           Write-Output "Downloaded to $output"
 
-      - name: Configure AnyViewer (Password = bear)
+      - name: Configure Supremo (Password = bear)
         shell: pwsh
         run: |
-          $configPath = "$env:TEMP\AnyViewer.ini"
-          Write-Output "Configuring AnyViewer with password..."
+          $configPath = "$env:TEMP\supremo.ini"
+          Write-Output "Configuring Supremo with password..."
           Set-Content -Path $configPath -Value "[general]`npassword=bear" -Encoding ASCII
 
-      - name: Start AnyViewer
+      - name: Start Supremo
         shell: pwsh
         run: |
-          $exe = "$env:TEMP\AnyViewer.exe"
-          $config = "$env:TEMP\AnyViewer.ini"
+          $exe = "$env:TEMP\supremo.exe"
+          $config = "$env:TEMP\supremo.ini"
           if (Test-Path $exe) {
-            Write-Output "Starting AnyViewer from $exe"
+            Write-Output "Starting Supremo from $exe"
             Start-Process $exe -ArgumentList "/config $config"
             Start-Sleep -Seconds 15
           } else {
-            Write-Error "AnyViewer.exe not found!"
+            Write-Error "Supremo.exe not found!"
             exit 1
           }
 
@@ -46,9 +46,9 @@ jobs:
           Write-Output "   • RAM: 8–16 GB"
           Write-Output "   • Storage: 256 GB (C:) + smaller D: drive"
           Write-Output "   • CPU: AMD EPYC (2–4 vCores)"
-          Write-Output "🆔 Device ID: (check AnyViewer window)"
+          Write-Output "🆔 Device ID: (check Supremo window)"
           Write-Output "🔑 Password: bear"
-          Write-Output "📱 Connect using AnyViewer on your PC or phone."
+          Write-Output "📱 Connect using Supremo on your PC or phone."
 
       - name: Keep Alive for 6 Hours
         shell: pwsh
