--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,27 +25,44 @@ jobs:
 
       - name: Start Supremo
         shell: pwsh
+        env:
+          SUPREMO_PIN: ${{ github.event.inputs.pin }}
+          CLOUDPC_NAME: ${{ github.event.inputs.name }}
         run: |
+          $pin = $env:SUPREMO_PIN
+          $cloudPCName = $env:CLOUDPC_NAME
           $supremoPath = "$env:TEMP\Supremo.exe"
-          $pin = "${{ github.event.inputs.pin }}"
-          $cloudPCName = "${{ github.event.inputs.name }}"
 
           Write-Output "Starting Supremo..."
           Start-Process -FilePath $supremoPath -ArgumentList "/PIN $pin /NAME $cloudPCName /RUN" -WindowStyle Hidden
 
-          # Wait a few seconds for Supremo to initialize
           Start-Sleep -Seconds 5
-
-          # Try to get the Supremo ID from running process registry (if available)
-          # Supremo ID is usually generated dynamically; for simplicity, we just print that it's running
           Write-Output "💻 Your Supremo cloud PC '$cloudPCName' is running!"
           Write-Output "🔑 PIN: $pin"
           Write-Output "You can connect using Supremo with the displayed PIN."
 
       - name: Spam Message & Keep Alive for 5 Hours
         shell: pwsh
+        env:
+          CLOUDPC_NAME: ${{ github.event.inputs.name }}
+          SUPREMO_PIN: ${{ github.event.inputs.pin }}
         run: |
           $durationHours = 5
           $durationSeconds = $durationHours * 3600
           $startTime = Get-Date
-          $cloudPCName = "${{ github
+          $cloudPCName = $env:CLOUDPC_NAME
+          $pin = $env:SUPREMO_PIN
+          $ram = "8–16 GB"
+          $storage = "256 GB (C:) + smaller D: drive"
+          $cpu = "AMD EPYC (2–4 vCores)"
+
+          while ((Get-Date) - $startTime -lt (New-TimeSpan -Seconds $durationSeconds)) {
+              Write-Output "🎉 Enjoy using your computer! 💻 '$cloudPCName'"
+              Write-Output "🖥️ Specs: RAM: $ram | Storage: $storage | CPU: $cpu"
+              Write-Output "🔑 Supremo PIN: $pin"
+              Write-Output "This computer runs for 6 hours. ⏰"
+              Write-Output "To get a new cloud computer, simply relaunch this workflow. 🚀"
+              Start-Sleep -Seconds 5
+          }
+
+          Write-Output "⏰ 5 hours reached. Job completed. ✅"
