--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,68 +1,94 @@
-name: Windows-2025 Cloud Computer (Supremo)
+name: Windows-2025 Personal Cloud PC (Supremo)
 
 on:
   workflow_dispatch:
     inputs:
       pin:
-        description: 'PIN for your Supremo cloud PC (4-6 digits)'
+        description: 'PIN for your Cloud PC (4-6 digits)'
         required: true
       name:
-        description: 'Friendly name for your cloud PC'
+        description: 'Friendly name for your Cloud PC'
         required: true
 
 jobs:
-  setup-supremo:
+  cloud-pc-job:
     runs-on: windows-2025
     steps:
-      - name: Download Supremo
+      - name: ☁️ Cloud PC: Initialize Download
         shell: pwsh
         run: |
           $url = "https://www.nanosystems.it/public/download/Supremo.exe"
           $output = "$env:TEMP\Supremo.exe"
-          Write-Output "Downloading Supremo..."
+          Write-Output "Downloading the Cloud PC remote control software..."
           Invoke-WebRequest -Uri $url -OutFile $output
-          Write-Output "Downloaded Supremo to $output"
+          Write-Output "Cloud PC software downloaded to $output"
 
-      - name: Start Supremo
+      - name: ⚡ Cloud PC: Start & Configure
         shell: pwsh
         env:
-          SUPREMO_PIN: ${{ github.event.inputs.pin }}
+          CLOUDPC_PIN: ${{ github.event.inputs.pin }}
           CLOUDPC_NAME: ${{ github.event.inputs.name }}
         run: |
-          $pin = $env:SUPREMO_PIN
+          $pin = $env:CLOUDPC_PIN
           $cloudPCName = $env:CLOUDPC_NAME
           $supremoPath = "$env:TEMP\Supremo.exe"
 
-          Write-Output "Starting Supremo..."
+          Write-Output "Starting your Cloud PC '$cloudPCName'..."
           Start-Process -FilePath $supremoPath -ArgumentList "/PIN $pin /NAME $cloudPCName /RUN" -WindowStyle Hidden
-
           Start-Sleep -Seconds 5
-          Write-Output "💻 Your Supremo cloud PC '$cloudPCName' is running!"
-          Write-Output "🔑 PIN: $pin"
-          Write-Output "You can connect using Supremo with the displayed PIN."
 
-      - name: Spam Message & Keep Alive for 5 Hours
+          # Extract Supremo ID from window title
+          Add-Type @"
+          using System;
+          using System.Runtime.InteropServices;
+          public class WinAPI {
+              [DllImport("user32.dll", SetLastError = true)]
+              public static extern int GetWindowText(IntPtr hWnd, System.Text.StringBuilder text, int count);
+              [DllImport("user32.dll", SetLastError = true)]
+              public static extern bool EnumWindows(EnumWindowsProc lpEnumFunc, IntPtr lParam);
+              public delegate bool EnumWindowsProc(IntPtr hWnd, IntPtr lParam);
+          }
+"@
+
+          $supremoID = ""
+          $null = [WinAPI]::EnumWindows({ param($hWnd, $lParam)
+              $sb = New-Object System.Text.StringBuilder 1024
+              [WinAPI]::GetWindowText($hWnd, $sb, $sb.Capacity) | Out-Null
+              $text = $sb.ToString()
+              if ($text -match "Supremo ID: (\d+)") {
+                  $supremoID = $matches[1]
+                  return $false # stop enumerating
+              }
+              return $true
+          }, [IntPtr]::Zero)
+
+          Write-Output "💻 Your personal Cloud PC '$cloudPCName' is running!"
+          Write-Output "🆔 Cloud PC ID: $supremoID"
+          Write-Output "🔑 PIN: $pin"
+          Write-Output "Connect from your Android or desktop app using this ID and PIN."
+
+      - name: ⏳ Cloud PC: Ready to Use!
         shell: pwsh
         env:
           CLOUDPC_NAME: ${{ github.event.inputs.name }}
-          SUPREMO_PIN: ${{ github.event.inputs.pin }}
+          CLOUDPC_PIN: ${{ github.event.inputs.pin }}
         run: |
           $durationHours = 5
           $durationSeconds = $durationHours * 3600
           $startTime = Get-Date
           $cloudPCName = $env:CLOUDPC_NAME
-          $pin = $env:SUPREMO_PIN
+          $pin = $env:CLOUDPC_PIN
           $ram = "8–16 GB"
           $storage = "256 GB (C:) + smaller D: drive"
           $cpu = "AMD EPYC (2–4 vCores)"
 
           while ((Get-Date) - $startTime -lt (New-TimeSpan -Seconds $durationSeconds)) {
-              Write-Output "🎉 Enjoy using your computer! 💻 '$cloudPCName'"
+              Write-Output "🎉 Enjoy using your Cloud PC! 💻 '$cloudPCName'"
               Write-Output "🖥️ Specs: RAM: $ram | Storage: $storage | CPU: $cpu"
               Write-Output "🔑 Supremo PIN: $pin"
-              Write-Output "This computer runs for 6 hours. ⏰"
-              Write-Output "To get a new cloud computer, simply relaunch this workflow. 🚀"
+              Write-Output "This Cloud PC runs for 6 hours. ⏰"
+              Write-Output "To get a new Cloud PC, simply relaunch this workflow. 🚀"
               Start-Sleep -Seconds 5
           }
 
-          Write-Output "⏰ 5 hours reached. Job completed. ✅"
+          Write-Output "⏰ 5 hours reached. Cloud PC job completed. ✅"
