--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,9 +26,9 @@ jobs:
       - name: ⚡ Cloud PC: Start Supremo
         shell: pwsh
         run: |
-          # Assign inputs to environment variables first
-          $pin = $env:GITHUB_EVENT_INPUTS_PIN
-          $cloudPCName = $env:GITHUB_EVENT_INPUTS_NAME
+          # Assign inputs to variables
+          $pin = "${{ github.event.inputs.pin }}"
+          $cloudPCName = "${{ github.event.inputs.name }}"
           $supremoPath = "$env:TEMP\Supremo.exe"
 
           Write-Output "Starting Cloud PC '$cloudPCName'..."
@@ -42,8 +42,8 @@ jobs:
       - name: ⏳ Cloud PC: Ready to Use!
         shell: pwsh
         run: |
-          $pin = $env:GITHUB_EVENT_INPUTS_PIN
-          $cloudPCName = $env:GITHUB_EVENT_INPUTS_NAME
+          $pin = "${{ github.event.inputs.pin }}"
+          $cloudPCName = "${{ github.event.inputs.name }}"
           $durationHours = 5
           $durationSeconds = $durationHours * 3600
           $startTime = Get-Date
